fixed spacing for social icons

--- a/main.css
+++ b/main.css
@@ -124,9 +124,16 @@ input:-webkit-autofill {
 }
 
 .social-container {
-  margin-top: 55px;
-  font-size: 3em;
-  letter-spacing: 20px;
+  margin: 55px 0 10px 0;
+  font-size: 2.5em;
+}
+
+.fa-facebook {
+  margin-right: 10px;
+}
+
+.fa-twitter {
+  margin-left: 10px;
 }
 
 .policy-link {
